--- a/aquiseconstruye/user/templates/register.html
+++ b/aquiseconstruye/user/templates/register.html
@@ -7,7 +7,7 @@
 	<div class="container">
 			<div class="row">
 					<div class="form-group text-center">
-							<div class="form-control" style="background-color:#fff0; border:0 solid #fff0; font-family:if; font-size:2rem; margin-top: 10%; height:53vh;">
+							<div class="form-control" style="background-color:#fff0; border:0 solid #fff0;  font-size:2rem; margin-top: 10%; height:53vh;">
 									{{ form.as_p }}
 									
 									
