detalles en lista listo

--- a/aquiseconstruye/work/templates/obra.html
+++ b/aquiseconstruye/work/templates/obra.html
@@ -134,7 +134,7 @@
 
   <div class="main_grid">
     <div class="left_side">
-      {%if regidor.foto%}
+      {%if obra.image%}
       <img class="foto" src='{{obra.image.url}}'>
 
       {%endif%}
