--- a/aquiseconstruye/home/templates/home.html
+++ b/aquiseconstruye/home/templates/home.html
@@ -1,4 +1,24 @@
 {% extends 'base.html' %} 
+{% load static %}
+<style>
+
+.btn-home{
+  color:#e1ad02;
+  text-align: center;
+  z-index: 1;
+  font-family: 'if';
+  src: url('fonts/if.ttf') format('truetype');
+}
+    a:hover {
+  color:#e1ad02;
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
+}
+</style>
+
 {% block content %}
 
 <div class="container">
@@ -7,5 +27,14 @@
             {{map|safe}}
         </div>
     </div>
+    <br>
+    <br>
+    {%if request.user.is_authenticated%}
+    <a href="#" class="btn btn-dark " style="color:#e1ad02;
+    text-align: center;
+    z-index: 1;
+    font-family: 'if';
+    src: url('fonts/if.ttf') format('truetype');">Toda la lista</a>
+    {% endif %}
 </div>
 {% endblock %}
