--- a/aquiseconstruye/templates/base.html
+++ b/aquiseconstruye/templates/base.html
@@ -99,8 +99,8 @@
 .navbar .menu-items {
   padding-top: 120px;
   box-shadow: inset 2000px 2000px 2000px #e1ad02;
-  height: 100vh;
-  width: 100%;
+  height: 50vh;
+  width: 50%;
   transform: translate(-150%);
   display: flex;
   flex-direction: column;
@@ -123,6 +123,7 @@
   position: absolute;
   top: 5px;
   right: 15px;
+  bottom: 10px;
   
 }
 
@@ -146,11 +147,28 @@
   display: none;
 }
 
+.afot{
+  color:#e1ad02;
+  text-align: center;
+  z-index: 1;
+  font-family: 'if';
+  src: url('fonts/if.ttf') format('truetype');
+}
+
 body {
     background-image:url("https://i.ibb.co/cy63Tfm/SL-043020-30500-22.jpg");
     background-size:     cover;                      /* <------ */
     background-repeat:   no-repeat;
     background-position: center center;
+}
+
+a:hover {
+  color:#e1ad02;
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
 }
 </style>    
     
@@ -168,6 +186,7 @@ body {
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&display=swap" rel="stylesheet">
         <title>Aquí se construye</title>
     </head>
     <nav>
@@ -182,13 +201,13 @@ body {
                 <span class="line line3"></span>
               </div>  
             <div class="logo">
-                <img src="{% static "LogoWeb.png" %}" style="width: 300px; height: 130px; margin-top:-35px;" alt='aqui se construye'>
+                <img src="{% static "LogoWeb.png" %}" style="width: 300px; height: 150px; margin-top:-54px;" alt='aqui se construye'>
             </div>
             {%if request.user.is_authenticated%}
             <div class="menu-items">
               <li><a href="{%url 'profile'%}">Perfil</a></li>
               {%if request.user.is_staff%}
-              <li><a href="#">Admin</a></li>
+              <li><a href="admin/">Admin</a></li>
               {%endif%}
               <li><a href="{%url 'logout'%}">Logout</a></li>
             </div>
@@ -234,11 +253,11 @@ body {
                         <div class="col-md-6">
                            <ul>
                               
-                              <li> <a href="">Acerca de nosotros</a> </li>
+                              <li> <a href="" class="afot">Acerca de nosotros</a> </li>
                            
                         
                           
-                              <li> <a href=""> Contacto</a> </li>
+                              <li> <a href="" class="afot"> Contacto</a> </li>
                            </ul>
                         </div>
           
