--- a/aquiseconstruye/work/templates/obras.html
+++ b/aquiseconstruye/work/templates/obras.html
@@ -1,7 +1,7 @@
 {%extends 'base.html'%}
 {% load static %}
-
-{%block title%} <p>'Obras'</p> {%endblock%}
+{% load widget_tweaks %}
+{%block title%} <p>'Obra'</p> {%endblock%}
 
 {%block extrahead%}
     <meta name="description" content=''/>
@@ -9,82 +9,27 @@
     <meta property="og:url"                content=" " />
     <meta property="og:type"               content="website" />
     <meta property="og:title"              content="observatorio de regidurías" />
+    <meta charset="utf-8">
 {%endblock%}
 
 {%block content%}
-<style>
-
-
-.card {
-  width: 475px;
-  height: 265px;
-  background-color: rgb(69, 69, 69);
-  background: linear-gradient(#000, #000);
-  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.4);
-  border-radius: 6px;
-  overflow: hidden;
-  position: relative;
-  margin: 1.5rem;
-}
-
-.card h1 {
-  text-align: center;
-}
-
-.card .general {
-  width: 300px;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 1;
-  padding: 1rem;
-  padding-top: 0;
-  border-color: #d9e022;
-  border-radius: 30px;
-}
-
-.card .general .more {
-  position: absolute;
-  bottom: 1rem;
-  right: 1rem;
-  font-size: 0.9em;
-}
-
-.more-info{
-      color: #D91C5C;
-      font-size:16px;
-      font-family: 'Montserrat';
-      text-align: center;
-      margin-top: 8%;
-   }
-.foto {
-  width: 150px;
-  height: 150px;
-  border-color: #d9e022;
-  -moz-border-radius: 100%;
-  -webkit-border-radius: 100%;
-  position: relative;
-  margin-top: 5%;
-  float: left;
-}
-
-
-</style>
-  {% for obras in obra %}
-
+<form method="get">
+    
+  <div class="row" style="margin-top:3%;">
+    <div class="form-group col-sm-4 col-md-2" style="margin-left:60%; font-family: 'Montserrat';">
+      {{ filter.form.traffic_light.label_tag }}
+      {% render_field filter.form.traffic_light class="form-control" %}
+    </div>
+    <div class="form-group col-sm-4 col-md-3" style="margin-top:30px; margin-left:60%;">
+      <button type="submit" class="btn " style="background-color: #000000; color: #fff;">
+        <span class="glyphicon glyphicon-search"></span> Buscar
+      </button>
+      </div>
   
-        <p>{{obras.name}}</p>
-       
+</form>
+<br>
+{% for obras in filter.qs %}
+    {% include 'card_obra.html' %}
+{%endfor%}
 
-      <a  style="color: #D91C5C; text-decoration:none; width: 10px; height: 10px; text-align:right;" href="{% url 'obra:obra' slug=obra.slug %}">VER MÁS</a>
-
-
-        
-
-    
-        
-        
-      {% endfor %}
-    
 {%endblock%}
