--- a/aquiseconstruye/work/templates/obra.html
+++ b/aquiseconstruye/work/templates/obra.html
@@ -15,7 +15,7 @@
 <style>
 </style>
 
-<div class="container" style="background-color: #fff;">
+<div class="container">
   <br>
   <br>
   <br>
@@ -23,9 +23,18 @@
   <br>
   <br>
   <br>
-  
-</div>
 
+</div>
+<div class="container" style="background-color: #fff;">
+  <br>
+  <br>
+  <br>
+  {% include 'info.html'%}
+  <br>
+  <br>
+  <br>
+
+</div>
 
 {%endblock%}
 
