--- a/aquiseconstruye/home/templates/home.html
+++ b/aquiseconstruye/home/templates/home.html
@@ -30,7 +30,7 @@ a {
     <br>
     <br>
     {%if request.user.is_authenticated%}
-    <a href="#" class="btn btn-dark " style="color:#e1ad02;
+    <a href="{%url 'obras'%}" class="btn btn-dark " style="color:#e1ad02;
     text-align: center;
     z-index: 1;
     font-family: 'if';
