--- a/aquiseconstruye/users/templates/profile.html
+++ b/aquiseconstruye/users/templates/profile.html
@@ -1,38 +1,36 @@
+{% extends 'base.html' %} 
+
 {% block content %}
 
 <!-- Profile -->
-<div class="profile">
-	<img src="{{ user.profile.image.url }}">
-	<h2>@{{ user.username }}</h2>
+<div class="container-fluid no-padding">
+    <div class="row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8" style="background-color:#fff0; border:0 solid #fff0; font-family:Covered By Your Grace; font-size:2rem; margin-top: 10%;">
+            <h2 class="" >{{user.username}}</h2>
+           
+            <div class="">
+                {%if user.avatar%}
+                    <img src='{{user.avatar.url}}' style="width:100px;border-radius:50px">
+                {%else%}
+                    <img src='https://i.postimg.cc/RhTTQLpt/user.png' style="width:100px;border-radius:50px; background-color:white;">
+                {%endif%}
+            </div>
 
-	{% if request.user.is_authenticated %}
-		{% if user.username != request.user.username %}
-			{% if user not in request.user.profile.following %}
-			<button><a class="follow-button" href="{% url 'follow' user %}">Follow</a></button>
-			{% else %}
-			<button><a class="follow-button" href="{% url 'unfollow' user %}">Unfollow</a></button>
-			{% endif %}
-		{% endif %}
-	{% endif %}
-	
-	
-</div>
+        
+        </div>
+    </div>
 
 <!-- Follow items -->
 <div class="follow">
 	<div>
-		<h5>Post</h5>
-		<p>{{ user.posts.count }}</p>
-	</div>
+		
 	<div>
 		<h5>Followers</h5>
 		<p>{{ user.profile.followers.count }}</p>
 
 	</div>
-	<div>
-		<h5>Following</h5>
-		<p>{{ user.profile.following.count }}</p>
-	</div>
+	
 </div>
 
 
