--- a/aquiseconstruye/work/templates/info.html
+++ b/aquiseconstruye/work/templates/info.html
@@ -4,6 +4,12 @@
 
 {% block content %}
     <div class="container">
+        {% if request.user.is_authenticated %}
+		
+			<button><a class="btn btn-dark" style="font-family:Covered By Your Grace; font-size:2rem;" href="{% url 'follow' %}">Follow</a></button>
+
+		{% endif %}
+	
         <div class="row text-center">
             <h2>{{obra.name}}</h2>
             <br>
