--- a/aquiseconstruye/templates/base.html
+++ b/aquiseconstruye/templates/base.html
@@ -211,7 +211,7 @@ a:hover .afot {
                 <span class="line line3"></span>
               </div>  
             <div class="logo">
-                <img src="{% static "LogoWeb.png" %}" style="width: 300px; height: 150px; margin-top:-54px;" alt='aqui se construye'>
+                <img src="{% static "LogoWeb.png" %}" style="width: 300px; height: 150px; margin-left:-54px;" alt='aqui se construye'>
             </div>
             {%if request.user.is_authenticated%}
             <div class="menu-items">
