listo para subirse

--- a/aquiseconstruye/users/templates/form_perfil.html
+++ b/aquiseconstruye/users/templates/form_perfil.html
@@ -32,6 +32,12 @@
                     <input type="file" class="form-control-file" name='avatar'>
                     <small></small>
                 </div>
+                <br>
+                <div class="form-group">
+                    <label>Portada</label>
+                    <input type="file" class="form-control-file" name='portada'>
+                    <small></small>
+                </div>
 
 				<br>
 				<button type="submit" id="submit" class="btn btn-dark" style="font-family:Covered By Your Grace; font-size:2rem;">Guardar</button>
