--- a/aquiseconstruye/templates/base.html
+++ b/aquiseconstruye/templates/base.html
@@ -6,147 +6,6 @@
   margin: auto;
 }
 
-.navbar {
-  width: 100%;
-  height: 150px;
-  background-color: #000000;
-  background-size:     cover;                      /* <------ */
-    background-repeat:   no-repeat;
-    background-position: center center;
-  box-shadow: 0 1px 4px rgb(146 161 176 / 45%);
-}
-
-.nav-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 62px;
-}
-
-.navbar .menu-items {
-  display: flex;
-}
-
-.navbar .nav-container li {
-  list-style: none;
-}
-
-.navbar .nav-container a {
-  text-decoration: none;
-  color: #000000;
-  font-weight: 500;
-  font-size: 3rem;
-  padding: 0.7rem;
-}
-
-.navbar .nav-container a:hover{
-    font-weight: bolder;
-}
-
-.nav-container {
-  display: block;
-  position: relative;
-  height: 60px;
-}
-
-.nav-container .checkbox {
-  position: absolute;
-  display: block;
-  height: 32px;
-  width: 32px;
-  top: 20px;
-  left: 20px;
-  z-index: 5;
-  opacity: 0;
-  cursor: pointer;
-}
-
-.nav-container .hamburger-lines {
-  display: block;
-  height: 26px;
-  width: 32px;
-  position: absolute;
-  top: 17px;
-  left: 20px;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.nav-container .hamburger-lines .line {
-  display: block;
-  height: 4px;
-  width: 100%;
-  border-radius: 10px;
-  background: #FFC404;
-}
-
-.nav-container .hamburger-lines .line1 {
-  transform-origin: 0% 0%;
-  transition: transform 0.4s ease-in-out;
-}
-
-.nav-container .hamburger-lines .line2 {
-  transition: transform 0.2s ease-in-out;
-}
-
-.nav-container .hamburger-lines .line3 {
-  transform-origin: 0% 100%;
-  transition: transform 0.4s ease-in-out;
-}
-
-.navbar .menu-items {
-  padding-top: 120px;
-  box-shadow: inset 2000px 2000px 2000px #e1ad02;
-  height: 50vh;
-  width: 50%;
-  transform: translate(-150%);
-  display: flex;
-  flex-direction: column;
-  margin-left: -40px;
-  padding-left: 50px;
-  transition: transform 0.5s ease-in-out;
-  text-align: center;
-  z-index: 1;
-  font-family: 'if';
-  src: url('fonts/if.ttf') format('truetype');
-}
-
-.navbar .menu-items li {
-  margin-bottom: 1.2rem;
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.logo {
-  position: absolute;
-  top: 5px;
-  right: 15px;
-  bottom: 10px;
-  
-}
-
-.nav-container input[type="checkbox"]:checked ~ .menu-items {
-  transform: translateX(0);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
-  transform: rotate(45deg);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
-  transform: scaleY(0);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
-  transform: rotate(-45deg);
-}
-
-.nav-container input[type="checkbox"]:checked ~ .logo{
-  display: none;
-}
-
 .afot{
   color:#e1ad02;
   text-align: center;
@@ -176,6 +35,45 @@ a:hover .afot {
   color:#e1ad02;
   text-decoration: none!important;
 }
+#menuresp-ct {z-index:500;position:relative;width:100%;}
+#menuresp-ct a {transition:all .25s ease;-webkit-transition:all .25s ease;}
+#menuresp {position:relative;display:block;background: #000;;color:#fff;width:100%;text-align:center;height:100px;font-size:17px;line-height:80px;font-family:'Roboto Condensed',Arial,Sans-Serif;font-weight:500;text-transform:uppercase;}
+#menuresp ul {display:inline-block;margin:0 auto;padding:0;list-style:none;list-style-image:none;vertical-align:top;}
+#menuresp li {float:left;}
+#menuresp li a {display:block;color:#fff;text-decoration:none;padding:0 30px;}
+#menuresp li a:hover {color:#FFC600;}
+
+/*MENU MOBILE*/
+@media screen and (max-width:1000px) {
+#menuresp-ct {overflow:hidden;}
+#menuresp {background:#fff;overflow:hidden;text-align:left;}
+#menuresp.menuheight {height:auto;}
+#menuresp .menucross {position:absolute;top:0;left:0;width:80px;height:80px;-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-o-transform:rotate(0deg);transform:rotate(0deg);-webkit-transition:.5s ease-in-out;-moz-transition:.5s ease-in-out;-o-transition:.5s ease-in-out;transition:.5s ease-in-out;cursor:pointer;}
+#menuresp .menucross .menucross-ct {position:relative;width:30px;height:30px;margin:25px 30px 25px 15px;}
+#menuresp .menucross span {display:block;position:absolute;height:3px;width:100%;background:#fff;opacity:1;left:0;-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-o-transform:rotate(0deg);transform:rotate(0deg);-webkit-transition:.25s ease-in-out;-moz-transition:.25s ease-in-out;-o-transition:.25s ease-in-out;transition:.25s ease-in-out;}
+#menuresp .menucross span:nth-child(1) {top:5px;-webkit-transform-origin:left center;-moz-transform-origin:left center;-o-transform-origin:left center;transform-origin:left center;}
+#menuresp .menucross span:nth-child(2) {top:13px;-webkit-transform-origin:left center;-moz-transform-origin:left center;-o-transform-origin:left center;transform-origin:left center;}
+#menuresp .menucross span:nth-child(3) {top:21px;-webkit-transform-origin:left center;-moz-transform-origin:left center;-o-transform-origin:left center;transform-origin:left center;}
+#menuresp .menucross.open span:nth-child(1) {-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);transform:rotate(45deg);top:3px;left:4px;}
+#menuresp .menucross.open span:nth-child(2) {width:0%;opacity:0;}
+#menuresp .menucross.open span:nth-child(3) {-webkit-transform:rotate(-45deg);-moz-transform:rotate(-45deg);-o-transform:rotate(-45deg);transform:rotate(-45deg);top:25px;left:4px;}
+#menuresp ul {width:100%;}
+#menuresp li .home div {display:block;}
+#menuresp li .home span {position:relative;}
+#menuresp li .home span:before {content:'';position:absolute;left:-22px;top:-5px;width:14px;height:40px;background-size:100%;}
+#menuresp li a.home {font-size:24px;border:0;text-align:center;}
+#menuresp li:first-child {background:#222;}
+#menuresp li:first-child a {color:#fff!important;}
+#menuresp li:first-child a:hover {color:#fff!important;}
+#menuresp li {float:none;border-bottom:1px solid #f6f6f6;}
+#menuresp li a {color:#000;}
+#menuresp li a:hover {color:#222!important;}
+#menuresp li a:hover {background:inherit;color:inherit;}
+}
+ .logo{
+  width:20% ;
+ }
+
 </style>    
     
     <head>
@@ -199,38 +97,42 @@ a:hover .afot {
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&display=swap" rel="stylesheet">
         <title>Aquí se construye</title>
     </head>
-    <nav>
-        
-        <div class="navbar">
-            
-          <div class="container nav-container">
-              <input class="checkbox" type="checkbox" name="" id="" />
-              <div class="hamburger-lines">
-                <span class="line line1"></span>
-                <span class="line line2"></span>
-                <span class="line line3"></span>
-              </div>  
-            <div class="logo">
-                <img src="{% static "LogoWeb.png" %}" style="width: 300px; height: 150px; margin-left:-54px;" alt='aqui se construye'>
-            </div>
-            {%if request.user.is_authenticated%}
-            <div class="menu-items">
-              <li><a href="{%url 'profile'%}">Perfil</a></li>
-              <li><a href="{%url 'profile_form'%}">Editar Perfil</a></li>
-              {%if request.user.is_staff%}
-              <li><a href="admin/">Admin</a></li>
-              {%endif%}
-              <li><a href="{%url 'logout'%}">Logout</a></li>
-            </div>
-            {%else%}
-            <div class="menu-items">
-              <li><a href="{%url 'login'%}">login</a></li>
-              <li><a href="{%url 'register'%}">register</a></li>
-            </div>
-            {%endif%}
+
+    <div id="menuresp-ct">
+      <div id="menuresp">
+        <div class="menucross">
+          <div class="menucross-ct">
+            <span></span>
+            <span></span>
+            <span></span>
           </div>
         </div>
-      </nav>
+        <div class="menuct">
+          <ul>
+            <li><a href="#" class="home">
+              <div class="logo">
+              <img src="{% static "LogoWeb.png" %}" style="width: 200px; height: 100px; " alt='aqui se construye'>
+          </div>
+        </a></li>
+          {%if request.user.is_authenticated%}
+            <li><a href="{%url 'profile'%}">Perfil</a></li>
+            <li><a href="{%url 'profile_form'%}">Editar Perfil</a></li>
+            {%if request.user.is_staff%}
+            <li><a href="admin/">Admin</a></li>
+            {%endif%}
+            <a href="{%url 'logout'%}">Logout</a>
+            {%else%}
+      
+              <li><a href="{%url 'login'%}">login</a></li>
+              <li><a href="{%url 'register'%}">register</a></li>
+          
+            {%endif%}
+          </ul>
+        </div>
+      </div>
+      <div class="pb-ombre"></div>
+    </div>
+  
     {%block extramenu%}
     {%endblock%}
     {%block content%}
@@ -247,7 +149,9 @@ a:hover .afot {
                <div class="row">
                   <div class="col-md-6 ">
                      <div class="logo-part">
-                     
+                      <div class="logo">
+                        <img src="{% static "LogoWeb.png" %}" style="width: 100px; height: 50px; " alt='aqui se construye'>
+                    </div>
                         
                      </div>
                   </div>
@@ -262,14 +166,14 @@ a:hover .afot {
                   <div class="col-md-6 px-4">
                      <div class="row ">
                         <div class="col-md-6">
-                           <ul>
+                          
                               
-                              <li> <a href="" style="text-decoration: none;" class="afot">Acerca de nosotros</a> </li>
+                               <a href="" style="text-decoration: none;" class="afot">Acerca de nosotros</a> 
                            
                         
                           
-                              <li> <a href="" class="afot"> Contacto</a> </li>
-                           </ul>
+                            <a href="" class="afot"> Contacto</a> 
+                           
                         </div>
           
                      </div>
@@ -316,6 +220,23 @@ $(document).ready(function(){
                   //   });
                   {% endif %}
               });
+              
+
+$(document).ready(function(){
+	$('.menucross').click(function(){
+		$('#menuresp').toggleClass('menuheight', 400, 'easeOutSine');
+		$(this).toggleClass('open');
+		$('html, body').animate({ scrollTop: $('#menuresp').offset().top}, 'slow');
+	});
+	//MENU MOBILE VS DESKTOP
+	if ($(window).width() <= 1024) {
+		$('li.sousmenu').click(function() {
+			$(this).find('i').toggleClass('rotation');
+			$(this).toggleClass('sousmenuheight', 400, 'easeOutSine');
+      $('html, body').animate({ scrollTop: $(this).offset().top}, 'slow'); //IF YOU WANT
+		});
+	}
+});
     </script>
     
     </body>
