--- a/aquiseconstruye/work/templates/galery.html
+++ b/aquiseconstruye/work/templates/galery.html
@@ -100,6 +100,32 @@ position: relative;
 
 }
 
+@media screen and (max-width: 780px) {
+
+    .container-gallery{
+			width: 500px;
+			margin:0 auto;
+		}
+
+		.gallery{
+	width: 100%;
+	overflow: hidden;
+		}
+
+}
+@media screen and (max-width: 480px) {
+    .container-gallery{
+			width: 350px;
+			margin:0 auto;
+		}
+
+		.gallery{
+	width: 100%;
+	overflow: hidden;
+		}
+}
+
+
 </style>
 
 {% block content %}
