--- a/aquiseconstruye/work/templates/obra.html
+++ b/aquiseconstruye/work/templates/obra.html
@@ -15,6 +15,7 @@
 <style>
 </style>
 
+{% if request.user.is_authenticated %}
 <div class="container">
   <br>
   <br>
@@ -30,11 +31,11 @@
   <br>
   <br>
   <div class="container">
-    {% if request.user.is_authenticated %}
+    
 
-  <button><a class="btn btn-dark" style="font-family:Covered By Your Grace; font-size:2rem;" href="{% url 'follow' %}">Follow</a></button>
+  <a class="btn btn-dark" style="font-family:Covered By Your Grace; font-size:2rem;" href="{% url 'follow' %}">Seguir</a>
 
-{% endif %}
+
 
     <div class="row text-center">
         <h2>{{obra.name}}</h2>
@@ -162,7 +163,12 @@
         <a href="{% url 'obra' obra.slug %}?download=1&fields=contracts,contracts1,contracts2,contracts3,contracts4,contracts5,contracts6,contracts7,contracts8,contracts9,contracts10,
         contracts11,contracts12,contracts13,contracts14,contracts15,contracts16,contracts17,contracts18, contracts19, contracts20,contracts21,contracts22,contracts23,
         contracts24,contracts25,contracts26,contracts27,contracts28,contracts29,contracts30,contracts31,contracts32,contracts33,contracts34,contracts35,contracts36,contracts37,contracts38,contracts39
-        contracts40,contracts41,contracts42,contracts43,contracts44,contracts45,contracts46,contracts47,contracts48,contracts49contracts50">Descargar archivos</a>
+        contracts40,contracts41,contracts42,contracts43,contracts44,contracts45,contracts46,contracts47,contracts48,contracts49contracts50" style="background-color: #000000; color:#e1ad02;
+        text-align: center;
+        z-index: 1;
+        font-size: 40px;
+        font-family: 'if';
+        src: url('fonts/if.ttf') format('truetype');">Descargar archivos</a>
 
        
         
@@ -187,13 +193,52 @@
     <object data="{{ obra.newsletter.url }}" type="application/pdf" width="80%" height="90%">
         <p>Este navegador no soporta la visualización de archivos PDF. Puedes descargar el archivo haciendo click <a href="{{ obra.newsletter.url }}">aquí</a>.</p>
       </object>
-      <br>
-  <br>
-  <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-  
-
+    <a href="{% url 'encuesta' obra_id=obra.id %} " style="background-color: #000000; color:#e1ad02;
+    text-align: center;
+    z-index: 1;
+    font-size: 40px;
+    font-family: 'if';
+    src: url('fonts/if.ttf') format('truetype');">Crear Encuesta</a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 </div>
+{%else%}
+
+<div class="container text-center" style="background-color: #fff;">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h2>{{obra.name}}</h2>
+    <p>Hola si quies saber mas de esta obra en contrucción tienes que registrarte con nosotros.</p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+</div>
+<br>
+  <br>
+  <br>
+
+{% endif %}
 
 {%endblock%}
 
